--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,4 +1,5 @@
 <form method="POST" action="#" th:action="@{${path}}" th:object="${form}">
+	<!--formタグのaction属性(URLの指定)の内容を置換しています。記述の仕方は、th:action="@{}"-->
 	<ul class="errs">
 		<li th:each="error : ${#fields.detailedErrors()}" th:text="${error.message}" class="err" />
 	</ul>
@@ -29,12 +30,13 @@
 </form>
 <section id="posts">
 	<ul>
-		<li th:each="post : ${list}" th:unless="${post.deleted}">
-			<!--↑listを表示する　ただしpost.delited(= true)を除く　。。。つまり、削除されたものを表示しないということ。　削除はデータが消えるのでなく、delitedがtrueになる-->
+		<li th:each="post : ${list}">
+
 			<article class="post">
 				<ul>
 					<li>
 						<h3 th:text="${post.author}" />
+						<!--表示するだけなので、*authorにならない　処理が含まれない-->
 					</li>
 					<li>
 						<h2 th:text="${post.title}" />
